--- a/favorite.html
+++ b/favorite.html
@@ -37,7 +37,7 @@
   <div class="container mt-5 clearfix">
     <!-- list & card switch -->
     <div class="row float-right" id="display-switch">
-      <p><i class="fa fa-th show-card showing" aria-hidden="true"></i></p>
+      <p><i class="fa fa-th show-card" aria-hidden="true"></i></p>
       <p><i class="fa fa-bars show-list ml-3" aria-hidden="true"></i></p>
     </div>
   </div>
