--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <!-- list & card switch -->
       <div class="row float-right" id="display-switch">
-        <p><i class="fa fa-th show-card showing" aria-hidden="true"></i></p>
+        <p><i class="fa fa-th show-card" aria-hidden="true"></i></p>
         <p><i class="fa fa-bars show-list ml-3" aria-hidden="true"></i></p>
       </div>
     </div>
